--- a/1_habitaciones_2.html
+++ b/1_habitaciones_2.html
@@ -11,11 +11,11 @@
     <h1 class="logo">Hotel Oasis</h1>
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Presentación</a></li>
-        <li><a href="habitaciones.html">Habitaciones</a></li>
-        <li><a href="deportes.html">Deportes</a></li>
-        <li><a href="gastronomia.html">Gastronomía</a></li>
-        <li><a href="servicios.html">Servicios / Extras</a></li>
+        <li><a >Presentación</a></li>
+        <li><a>Habitaciones</a></li>
+        <li><a >Deportes</a></li>
+        <li><a >Gastronomía</a></li>
+        <li><a >Servicios / Extras</a></li>
       </ul>
     </nav>
   </header>
@@ -23,24 +23,81 @@
   <main class="container">
     <h2>Nuestras Habitaciones</h2>
     <div class="rooms-grid">
-      <div class="room-card">Habitación Simple
-        <img src="img/habitacion simple.jpg" alt="Habitación Simple">
+
+      <div class="room-card">
+         <img src="img/habitacion simple.jpg" alt="Habitación Simple">
+        <h3>Habitación Simple</h3>
+        <div class="room-description">
+          Habitación cómoda para una persona, con baño privado y escritorio.
+        </div>
+        <div class="room-reviews">
+          <span class="review-stars">★★★★☆</span>
+        </div>
+        <!-- Dentro de cada .room-card -->
+        <button class="select-room-btn">Seleccionar habitación</button>
       </div>
-      <div class="room-card">Habitación Doble
-        <img src="img/habitacion_doble.jpg" alt="Habitación Doble">
-      </div>
-      <div class="room-card">Suite
+
+      <div class="room-card">
+  <img src="img/habitacion_doble.jpg" alt="Habitación Doble">
+  <h3>Habitación Doble</h3>
+  <div class="room-description">
+    Habitación espaciosa con dos camas, baño privado y vista al jardín.
+  </div>
+  <div class="room-reviews">
+    <span class="review-stars">★★★★★</span>
+  </div>
+  <button class="select-room-btn">Seleccionar habitación</button>
+</div>
+
+      <div class="room-card">
         <img src="img/suite.jpg" alt="Suite">
+        <h3>Suite</h3>
+        <div class="room-description">
+          Suite de lujo con cama king size, sala de estar y jacuzzi.
+        </div>
+        <div class="room-reviews">
+    <span class="review-stars">★★★★★</span>
+  </div>
+        <button class="select-room-btn">Seleccionar habitación</button>
       </div>
-      <div class="room-card">Familiar
-        <img src="img/habitacion_familiar.jpeg" alt="Habitación Familiar">
-      </div>    
-      <div class="room-card">Premium
-        <img src="img/habitacion_premium.jpeg" alt="Habitación Premium">
+
+      <div class="room-card">
+        <img src="img/Habitacion-Familiar-Hotel--1.webp" alt="Habitación Familiar">
+        <h3>Habitación Familiar</h3>
+        <div class="room-description">
+          Habitación amplia para familias, con dos camas dobles y baño privado.
+        </div>
+        <div class="room-reviews">
+    <span class="review-stars">★★★★☆</span>
+  </div>
+        <button class="select-room-btn">Seleccionar habitación</button>
       </div>
-      <div class="room-card">Economy
+
+
+      <div class="room-card">
+        <img src="img/habitacion-premium.jpg" alt="Habitación Premium">
+        <h3>Habitación Premium</h3>
+        <div class="room-description">
+          Habitación de lujo con vistas al mar, cama king size y jacuzzi.
+        </div>
+        <div class="room-reviews">
+    <span class="review-stars">★★★★★</span>
+  </div>
+        <button class="select-room-btn">Seleccionar habitación</button>
+      </div>
+
+      <div class="room-card">
         <img src="img/economi.webp" alt="Habitación Economy">
+        <h3>Habitación Economy</h3>
+        <div class="room-description">
+          Habitación económica con cama matrimonial y baño compartido.
+        </div>
+        <div class="room-reviews">
+    <span class="review-stars">★★★☆☆</span>
+  </div>
+        <button class="select-room-btn">Seleccionar habitación</button>
       </div>
+      
     </div>
   </main>
 
