hice ahi cambios

--- a/1_habitaciones_2.html
+++ b/1_habitaciones_2.html
@@ -30,24 +30,29 @@
         <div class="room-description">
           Habitación cómoda para una persona, con baño privado y escritorio.
         </div>
+        <div class="room-price">
+          <strong>Precio:</strong> $45 por noche
+        </div>
         <div class="room-reviews">
           <span class="review-stars">★★★★☆</span>
         </div>
-        <!-- Dentro de cada .room-card -->
         <button class="select-room-btn">Seleccionar habitación</button>
       </div>
 
       <div class="room-card">
-  <img src="img/habitacion_doble.jpg" alt="Habitación Doble">
-  <h3>Habitación Doble</h3>
-  <div class="room-description">
-    Habitación espaciosa con dos camas, baño privado y vista al jardín.
-  </div>
-  <div class="room-reviews">
-    <span class="review-stars">★★★★★</span>
-  </div>
-  <button class="select-room-btn">Seleccionar habitación</button>
-</div>
+        <img src="img/habitacion_doble.jpg" alt="Habitación Doble">
+        <h3>Habitación Doble</h3>
+        <div class="room-description">
+          Habitación espaciosa con dos camas, baño privado y vista al jardín.
+        </div>
+        <div class="room-price">
+          <strong>Precio:</strong> $65 por noche
+        </div>
+        <div class="room-reviews">
+          <span class="review-stars">★★★★★</span>
+        </div>
+        <button class="select-room-btn">Seleccionar habitación</button>
+      </div>
 
       <div class="room-card">
         <img src="img/suite.jpg" alt="Suite">
@@ -55,9 +60,12 @@
         <div class="room-description">
           Suite de lujo con cama king size, sala de estar y jacuzzi.
         </div>
+        <div class="room-price">
+          <strong>Precio:</strong> $120 por noche
+        </div>
         <div class="room-reviews">
-    <span class="review-stars">★★★★★</span>
-  </div>
+          <span class="review-stars">★★★★★</span>
+        </div>
         <button class="select-room-btn">Seleccionar habitación</button>
       </div>
 
@@ -67,12 +75,14 @@
         <div class="room-description">
           Habitación amplia para familias, con dos camas dobles y baño privado.
         </div>
+        <div class="room-price">
+          <strong>Precio:</strong> $90 por noche
+        </div>
         <div class="room-reviews">
-    <span class="review-stars">★★★★☆</span>
-  </div>
+          <span class="review-stars">★★★★☆</span>
+        </div>
         <button class="select-room-btn">Seleccionar habitación</button>
       </div>
-
 
       <div class="room-card">
         <img src="img/habitacion-premium.jpg" alt="Habitación Premium">
@@ -80,9 +90,12 @@
         <div class="room-description">
           Habitación de lujo con vistas al mar, cama king size y jacuzzi.
         </div>
+        <div class="room-price">
+          <strong>Precio:</strong> $150 por noche
+        </div>
         <div class="room-reviews">
-    <span class="review-stars">★★★★★</span>
-  </div>
+          <span class="review-stars">★★★★★</span>
+        </div>
         <button class="select-room-btn">Seleccionar habitación</button>
       </div>
 
@@ -92,9 +105,12 @@
         <div class="room-description">
           Habitación económica con cama matrimonial y baño compartido.
         </div>
+        <div class="room-price">
+          <strong>Precio:</strong> $35 por noche
+        </div>
         <div class="room-reviews">
-    <span class="review-stars">★★★☆☆</span>
-  </div>
+          <span class="review-stars">★★★☆☆</span>
+        </div>
         <button class="select-room-btn">Seleccionar habitación</button>
       </div>
       
