--- a/2_deportes.html
+++ b/2_deportes.html
@@ -11,11 +11,11 @@
     <h1 class="logo">Hotel Oasis</h1>
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Presentación</a></li>
-        <li><a href="habitaciones.html">Habitaciones</a></li>
-        <li><a href="deportes.html">Deportes</a></li>
-        <li><a href="gastronomia.html">Gastronomía</a></li>
-        <li><a href="servicios.html">Servicios / Extras</a></li>
+        <li><a >Presentación</a></li>
+        <li><a >Habitaciones</a></li>
+        <li><a >Deportes</a></li>
+        <li><a >Gastronomía</a></li>
+        <li><a >Servicios / Extras</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +24,7 @@
     <h2>Deportes</h2>
     <div class="deportes-grid">
       <div class="deporte-card">
-        <img src="img/gimnasio.jpg" alt="Gimnasio">
+        <img src="img/gym.jpg" alt="Gimnasio">
         <h3>Gimnasio</h3>
         <p>Abierto 24/7 con equipos básicos.</p>
       </div>
@@ -36,25 +36,25 @@
       </div>
 
       <div class="deporte-card">
-        <img src="img/polideportivo.jpg" alt="Pista polideportiva">
+        <img src="img/pista polidedeportiva.webp" alt="Pista polideportiva">
         <h3>Pista polideportiva</h3>
         <p>Fútbol, baloncesto y actividades recreativas.</p>
       </div>
 
       <div class="deporte-card">
-        <img src="img/futbol.jpg" alt="Cancha de fútbol">
-        <h3>Cancha de Fútbol</h3>
+        <img src="img/Cancha_sintetica.jpg" alt="Cancha de fútbol">
+        <h3>Cancha sintetica</h3>
         <p>Campo profesional con césped natural.</p>
       </div>
 
       <div class="deporte-card">
-        <img src="img/micro.jpg" alt="Cancha de microfútbol">
-        <h3>Cancha de Microfútbol</h3>
+        <img src="img/futsal.jpg" alt="Cancha de microfútbol">
+        <h3>Cancha de futsal</h3>
         <p>Ideal para partidos rápidos con amigos.</p>
       </div>
 
       <div class="deporte-card">
-        <img src="img/pinpong.jpg" alt="Tenis de mesa">
+        <img src="img/mesa_pingpong.jpg" alt="Tenis de mesa">
         <h3>Ping-Pong</h3>
         <p>Mesas de tenis de mesa para diversión y torneos.</p>
       </div>
