actualizacion de hotel

--- a/3_gastronomia.html
+++ b/3_gastronomia.html
@@ -11,23 +11,58 @@
     <h1 class="logo">Hotel Oasis</h1>
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Presentación</a></li>
-        <li><a href="habitaciones.html">Habitaciones</a></li>
-        <li><a href="deportes.html">Deportes</a></li>
-        <li><a href="gastronomia.html">Gastronomía</a></li>
-        <li><a href="servicios.html">Servicios / Extras</a></li>
+        <li><a >Presentación</a></li>
+        <li><a >Habitaciones</a></li>
+        <li><a >Deportes</a></li>
+        <li><a >Gastronomía</a></li>
+        <li><a >Servicios / Extras</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="container">
     <h2>Gastronomía</h2>
-    <ul>
-      <li>Desayuno buffet</li>
-      <li>Restaurante a la carta</li>
-      <li>Cafetería y snacks</li>
-      <li>Servicio a la habitación</li>
-    </ul>
+    
+
+
+    <div class="gastronomia-grid">
+      <div class="gastronomia-card">
+        <img src="img/desayuno_bufett.webp" alt="Desayuno Buffet">
+        <h3>desayuno buffet</h3>
+        <p>Comienza el día con nuestro delicioso desayuno buffet, que incluye una variedad de opciones frescas y sabrosas.</p>
+      </div>
+
+      <div class="gastronomia-card">
+        <img src="img/comida_tipica.jpeg" alt="Comida típica">
+        <h3>comida tipica</h3>
+        <p>Disfruta de los sabores tradicionales de la región.</p>
+      </div>
+
+      <div class="gastronomia-card">
+        <img src="img/cafeteria.jpg" alt="Cafetería">
+        <h3>cafeteria</h3>
+        <p>Relájate en nuestra cafetería con una selección de cafés y pasteles.</p>
+      </div>
+
+      <div class="gastronomia-card">
+        <img src="img/restaurante_carta.jpg" alt="Comida a la carta">
+        <h3>comida a la carta</h3>
+        <p>Disfruta de una selección de platos a la carta en nuestro restaurante.</p>
+      </div>
+
+      <div class="gastronomia-card">
+        <img src="img/platos especiales.jpeg" alt="platos especiales del hotel">
+        <h3> platos especiales del hotel</h3>
+        <p>Descubre nuestros platos exclusivos, preparados con ingredientes frescos y de calidad.</p>
+      </div>
+
+      <div class="gastronomia-card">
+        <img src="img/vinos.jpg" alt="Vinos al gusto">
+        <h3>vinos al gusto</h3>
+        <p>Disfruta de una selección de vinos de alta calidad, perfectos para acompañar tu comida.</p>
+      </div>
+    </div>
+  </main>
   </main>
 
   <footer class="site-footer">
