--- a/servicios.html
+++ b/servicios.html
@@ -13,11 +13,11 @@
     <h1 class="logo">Hotel Oasis</h1>
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Presentación</a></li>
-        <li><a href="habitaciones.html">Habitaciones</a></li>
-        <li><a href="deportes.html">Deportes</a></li>
-        <li><a href="gastronomia.html">Gastronomía</a></li>
-        <li><a href="servicios.html">Servicios / Extras</a></li>
+        <li><a href="index.html" class="boton" role="button">Presentación</a></li>
+        <li><a href="habitaciones.html" class="boton" role="button">Habitaciones</a></li>
+        <li><a href="deportes.html" class="boton" role="button">Deportes</a></li>
+        <li><a href="gastronomia.html" class="boton" role="button">Gastronomía</a></li>
+        <li><a href="servicios.html" class="boton" role="button">Servicios / Extras</a></li>
       </ul>
     </nav>
   </header>
