--- a/gastronomia.html
+++ b/gastronomia.html
@@ -11,11 +11,11 @@
     <h1 class="logo">Hotel Oasis</h1>
     <nav class="main-nav">
       <ul>
-        <li><a >Presentación</a></li>
-        <li><a >Habitaciones</a></li>
-        <li><a >Deportes</a></li>
-        <li><a >Gastronomía</a></li>
-        <li><a >Servicios / Extras</a></li>
+        <li><a href="index.html" class="boton" role="button">Presentación</a></li>
+        <li><a href="habitaciones.html" class="boton" role="button">Habitaciones</a></li>
+        <li><a href="deportes.html" class="boton" role="button">Deportes</a></li>
+        <li><a href="gastronomia.html" class="boton" role="button">Gastronomía</a></li>
+        <li><a href="servicios.html" class="boton" role="button">Servicios / Extras</a></li>
       </ul>
     </nav>
   </header>
